--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:16-alpine
     container_name: kloudops-postgres
     environment:
-      POSTGRES_DB: kloudops
-      POSTGRES_USER: kloudops
-      POSTGRES_PASSWORD: kloudops
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -29,10 +29,10 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://kloudops:kloudops@postgres:5432/kloudops
-      ENV: dev
+      DATABASE_URL: ${DATABASE_URL}
+      ENV: ${BACKEND_ENV}
     ports:
-      - "8000:8000"
+      - "${BACKEND_PORT}:8000"
     networks:
       - kloudops-net
 
@@ -45,11 +45,12 @@ services:
     depends_on:
       - backend
     environment:
-      AGENT_ID: local-agent-1
-      API_URL: http://backend:8000
-      PORT: 8080
+      AGENT_ID: ${AGENT_ID}
+      API_URL: ${API_URL}
+      PORT: ${AGENT_PORT}
+      ENV: ${AGENT_ENV}
     ports:
-      - "8080:8080"
+      - "${AGENT_PORT}:${AGENT_PORT}"
     networks:
       - kloudops-net
 
