--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U kloudops"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -33,6 +33,9 @@ services:
       ENV: ${BACKEND_ENV}
     ports:
       - "${BACKEND_PORT}:8000"
+    healthcheck:
+      # The -f flag makes curl exit with a non-zero code if the response code is 400 or above.
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
     networks:
       - kloudops-net
 
@@ -43,7 +46,8 @@ services:
     image: kloudops-agent
     container_name: kloudops-agent
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     environment:
       AGENT_ID: ${AGENT_ID}
       API_URL: ${API_URL}
