--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,10 @@ name: CI
 # When CI starts
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master", "dev", "feature/*" ]
   pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -44,7 +46,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           cd backend-api
-          pip install -r requirments.txt
+          pip install -r requirements.txt
           
         # 7️⃣ Check of backend import
       - name: Backend import check
